feat(BC): Updating existed bCard info
