# api/swagger.json
@@ -112,6 +112,12 @@
             "name": "profileImageThumbnail",
             "type": "string",
             "description": "User profile image thumbnail"
+          },
+          {
+            "in": "query",
+            "name": "bCardId",
+            "type": "string",
+            "description": "BC identifier"
           }
         ],
         "responses": {
